# uptime-check

uptime-api/: .env  .env.test  README.md  docker-compose.yml
uptime-api/.cargo/: config.toml
uptime-api/.github/workflows/: ci.yml
uptime-api/cli/: Cargo.toml  README.md
uptime-api/cli/src/: lib.rs
uptime-api/config/: Cargo.toml  README.md
uptime-api/config/src/: lib.rs
uptime-api/db/: Cargo.toml  README.md
uptime-api/db/migrations/: 1733608462__create-users.sql  1733694563__create-monitored-websites.sql
uptime-api/db/src/: lib.rs
uptime-api/db/src/entities/: mod.rs  monitoredwebsites.rs  users.rs
uptime-api/db/src/test_helpers/: mod.rs
uptime-api/macros/: Cargo.toml  README.md
uptime-api/macros/src/: lib.rs
uptime-api/web/: Cargo.toml  README.md
uptime-api/web/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
uptime-api/web/src/controllers/: authentication.rs  error.rs  mod.rs  users.rs
uptime-api/web/src/middlewares/: validate_jwt.rs
uptime-api/web/src/test_helpers/: mod.rs
uptime-api/web/tests/api/: users_test.rs
uptime-frond-end/: Cargo.toml
uptime-frond-end/config/: development.yaml  test.yaml
uptime-frond-end/examples/: playground.rs
uptime-frond-end/tests/models/: users.rs
uptime-frond-end/tests/requests/: auth.rs  prepare_data.rs
uptime-frond-end/tests/tasks/: seed.rs
