[package]
name = "uptime-api-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:serde_json", "dep:tower", "dep:hyper", "dep:uptime-api-macros"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
uptime-api-config = { path = "../config" }
uptime-api-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
uuid = { version = "1.6", features = ["serde"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
validator = "0.19"
bcrypt = "0.15.1"
uptime-api-macros = { path = "../macros", optional = true }
jsonwebtoken = "8.2.0"

[dev-dependencies]
fake = "3.0"
googletest = "0.13"
uptime-api-db = { path = "../db", features = ["test-helpers"] }
uptime-api-web = { path = ".", features = ["test-helpers"] }
